# flash-view

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: windows.yml
cmake/: CompilerWarnings.cmake
docs/performance/: phase-1-benchmark.md
docs/superpowers/plans/: 2026-06-22-fast-image-viewer-phase-1.md  2026-06-27-thumbnail-performance.md
docs/superpowers/specs/: 2026-06-22-fast-image-viewer-design.md
include/viewer/app/: input_mapping.h  render_failure_policy.h  window_state.h
include/viewer/core/: async_shutdown.h  cancellation.h  directory_navigator.h  format_probe.h  image_frame.h  load_generation.h  load_metrics.h  load_request.h  natural_sort.h  priority_executor.h  result.h  three_frame_cache.h  thumbnail_layout.h  view_transform.h
include/viewer/platform/: wic_decoder.h
include/viewer/render/: d3d_error_policy.h  d3d_renderer.h  render_math.h
src/app/: app.cpp  app.h  app.rc  main_window.cpp  main_window.h  resource.h  winmain.cpp
src/core/: directory_navigator.cpp  format_probe.cpp  natural_sort.cpp  priority_executor.cpp  view_transform.cpp
src/platform/: wic_decoder.cpp
src/render/: d3d_renderer.cpp
src/tools/: file_association.cpp
tests/: CMakeLists.txt
tests/app/: async_load_contract_test.cpp  input_mapping_test.cpp  render_failure_policy_test.cpp  source_regression_test.cpp  window_state_test.cpp
tests/core/: async_shutdown_test.cpp  directory_navigator_test.cpp  format_probe_test.cpp  image_types_test.cpp  load_generation_test.cpp  load_metrics_test.cpp  natural_sort_test.cpp  priority_executor_test.cpp  smoke_test.cpp  three_frame_cache_test.cpp  thumbnail_layout_test.cpp  view_transform_test.cpp
tests/platform/: wic_decoder_test.cpp
tests/render/: d3d_error_policy_test.cpp  d3d_renderer_contract_test.cpp  render_math_test.cpp
tools/: make_test_fixtures.ps1  register_file_associations.ps1  unregister_file_associations.ps1
